syntax = "proto3";

package producer;

service ProducerService {
    rpc Produce (ProduceRequest) returns (ProduceResponse) {}
}

message ProduceRequest {
    string topicName = 1;
    bytes body = 2;
}

message ProduceResponse {
    string code = 1;
    string message = 2;
}